# selectel_test

./: .env.example  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3e196d013b87_vacancy_external_id_add_expanded_.py
app/: constants.py  exception_handlers.py  exceptions.py  main.py
app/api/v1/: parse.py  vacancies.py
app/core/: config.py
app/crud/: vacancy.py
app/models/: vacancy.py
app/schemas/: external.py  vacancy.py
app/services/: parser.py  scheduler.py
