[project]
name = "orders-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "bcrypt>=3.2.2,<4.0",
    "celery>=5.6.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.5",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
    "bcrypt>=3.2.2,<4.0",
    "ruff>=0.15.0",
    "redis>=7.1.1",
    "aio-pika>=9.5.8",
    "slowapi>=0.1.9",
]

[tool.ruff]
line-length = 88
exclude = [
    "alembic",
]

lint.fixable = ["ALL"]

lint.select = [
    "E",  # All errors
    "W",  # All warnings
    "PIE",  # All flake8-pie
    "RET",  # All flake8-return
    "PLE",  # All Errors from Pylint
    "F401",  # unused-import
    "F541",  # f-string-missing-placeholders
    "F841",  # unused-variable
    "I001",  # isort: unsorted-imports
    "I002",  # isort: missing-required-import
    ]


[tool.ruff.lint.isort]
known-first-party = ["order_management"]  
known-third-party = ["pydantic", "fastapi", "sqlalchemy", "asyncpg", "jinja2"]

# ФОРМАТЕР
[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
